# myassistant

./: .gitignore  README.md  assistant.py  cli.py  memory.py  pyproject.toml  requirements.txt  setup.py
